--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@types/node": "11.13.2",
     "@types/react": "16.8.13",
     "@types/react-dom": "16.8.3",
+    "axios": "^0.18.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "typescript": "3.4.2"
   },
   "scripts": {
+    "starts": "set HTTPS=true&&react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
